# gallium-cli

./: Cargo.toml  README.md  build.rs
.github/workflows/: build-and-test.yaml  release.yaml
libs/qemu_img_cmd_types/: Cargo.toml
libs/qemu_img_cmd_types/src/info/: mod.rs  types.rs
libs/qemu_img_cmd_types/src/info/testdata/: qcow2.json  raw1.json  vhdx.json  vmdk.json  vpc.json
src/: api.rs  args.rs  login.rs  main.rs  proxy.rs  ssh.rs
src/api/: errors.rs  mod.rs
src/api/cluster_vm_api/: entities.rs  mod.rs
src/api/command_v2_api/: entities.rs  mod.rs
src/api/common_api/: entities.rs
src/api/login_api/: entities.rs  mod.rs
src/api/storage_api/: entities.rs  mod.rs
src/api/vm_service_api/: entities.rs  mod.rs
src/helpers/: auth.rs  cmd_response.rs  dotfile.rs  env.rs  helper_cmd_error.rs  mod.rs  nbd.rs
src/helpers/cmd/: cmd_progress.rs  cmd_response.rs  mod.rs
src/helpers/mtls/: init_mtls_cmd.rs  mod.rs
src/helpers/qemu/: convert_progress.rs  mod.rs
src/helpers/qemu/qemu_img_cmd_provider/: dl_win.rs  mod.rs
src/helpers/ui/: mod.rs  transfer_progress_ui.rs
src/task_common/: error.rs
src/tasks/: login.rs  logout.rs  mod.rs  ssh.rs  version.rs
src/tasks/export/: format.rs  mod.rs  ui_confirm.rs  volume_scan.rs
src/tasks/import/: disk_pool.rs  mod.rs  param_helpers.rs  source_scan.rs
src/tasks_internal/: mod.rs  proxy.rs  qemu_img.rs
