[package]
name = "gallium-cli"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.100" }
clap = { version = "4.5.50", features = ["cargo", "derive"] }
dialoguer = { version = "0.12.0" }
duct = { version = "1.1.0" }
futures-util = { version = "0.3" }
home = { version = "0.5.12" }
reqwest = { version = "0.13.2", features = ["json", "query", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
tokio = { version = "1.48.0", features = ["rt", "macros", "io-std", "fs"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots", "stream", "connect"], default-features = false }
url = { version = "2.5.0" }
