[workspace]

members = [
    "libs/qemu_img_cmd_types"
]

[package]
name = "gallium-cli"
version = "0.2.0-pre5"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.60", features = ["cargo", "derive"] }
derive_more = { version = "2.1.1", features = ["constructor"] }
dialoguer = { version = "0.12.0" }
duct = { version = "1.1.1" }
futures-util = { version = "0.3" }
home = { version = "0.5.12" }
humansize = "2"
qemu_img_cmd_types = { path = "libs/qemu_img_cmd_types" }
pem = "3.0.6"
rcgen = { version = "0.14.7", features = ["crypto","ring", "x509-parser"] }
reqwest = { version = "0.13.2", features = ["json", "query", "rustls"] }
rustls = "0.23.37"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
snafu = { version = "0.9.0", features = ["rust_1_81"] }
tempfile = "3.26.0"
time = "0.3.47"
tokio = { version = "1.50.0", features = ["rt", "macros", "io-std", "fs"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots", "stream", "connect"], default-features = false }
url = { version = "2.5.0" }
x509-parser = "0.18.1"
cliclack = "0.3.9"


[build-dependencies]
time = "0.3.47"

[lints.clippy]

# Enable desired off-by-default lints
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"

